@@ -1,5 +1,10 @@
 2007-08-10  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): minor
+	cleanup.
+
+2007-08-10  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpnumberpairentry.c: formatting.
 
 2007-08-10  Martin Nordholts  <martinn@svn.gnome.org>
